# ros2-fleet

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.jetson  README.md  bringup-entrypoint.sh  docker-compose.yml
ros2_ws/: record.sh  run_bridge.sh  run_detector.sh  test_camera.py  test_gst.sh
ros2_ws/rung1/: README.md  detect_manual.py  detect_ultralytics.py
ros2_ws/rung4/: README.md  benchmark.py  build_engine.sh  export_onnx.py  trt_infer.py
ros2_ws/src/: .gitkeep
ros2_ws/src/bringup/: package.xml  setup.py
ros2_ws/src/bringup/launch/: bringup.launch.py
ros2_ws/src/csi_camera/: package.xml  setup.py
ros2_ws/src/csi_camera/csi_camera/: camera_node.py
ros2_ws/src/yolo_detector/: README.md  package.xml  setup.py
ros2_ws/src/yolo_detector/yolo_detector/: detector_node.py  trt_backend.py
