<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>csi_camera</name>
  <version>0.1.0</version>
  <description>
    Publish a Jetson CSI camera (IMX219 via Argus/nvarguscamerasrc) as a ROS2 Image topic.
    Reusable across any Jetson + CSI camera robot (a fleet capability, not robot-specific).
  </description>
  <maintainer email="charleskh@gmail.com">Charles Howard</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <!-- Frames are pulled via GStreamer's Python bindings (python3-gi + GstApp), installed in
       the Jetson image (Dockerfile.jetson), NOT via OpenCV: cv2.VideoCapture(CAP_GSTREAMER)
       double-frees on this L4T image. The node packs sensor_msgs/Image by hand — no cv_bridge
       and no OpenCV dependency. -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
